force-app/main/default/objects/PS_Output__c/PS_Output__c.object-meta.xml
<CustomObject>
    <label>PS_Output</label>
    <nameField>
        <label>PS_Output</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Output</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>