force-app/main/default/objects/PS_Output__c/fields/isPriceOverride__c.field-meta.xml
<CustomField>
    <fullName>isPriceOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPriceOverride</label>
    <type>Checkbox</type>
</CustomField>