force-app/main/default/objects/PS_Output__c/fields/Lead_Time_40__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_40__c</fullName>
    <label>Lead_Time_40</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>