force-app/main/default/objects/PS_Output__c/fields/Non_Disountable_Lot_Charge_Override__c.field-meta.xml
<CustomField>
    <fullName>Non_Disountable_Lot_Charge_Override__c</fullName>
    <label>Non_Disountable_Lot_Charge_Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>