force-app/main/default/objects/PS_Output__c/fields/OA_Override__c.field-meta.xml
<CustomField>
    <fullName>OA_Override__c</fullName>
    <label>OA_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>