force-app/main/default/objects/PS_Output__c/fields/OB_Override__c.field-meta.xml
<CustomField>
    <fullName>OB_Override__c</fullName>
    <label>OB_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>