force-app/main/default/objects/PS_Output__c/fields/ORP_Override__c.field-meta.xml
<CustomField>
    <fullName>ORP_Override__c</fullName>
    <label>ORP_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>