force-app/main/default/objects/PS_Output__c/fields/ORV_Override__c.field-meta.xml
<CustomField>
    <fullName>ORV_Override__c</fullName>
    <label>ORV_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>