force-app/main/default/objects/PS_Output__c/fields/OW_Override__c.field-meta.xml
<CustomField>
    <fullName>OW_Override__c</fullName>
    <label>OW_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>