force-app/main/default/objects/PS_Output__c/fields/Part_Selector__c.field-meta.xml
<CustomField>
    <fullName>Part_Selector__c</fullName>
    <label>Part Selector</label>
    <referenceTo>Part_Selector__c</referenceTo>
    <relationshipLabel>PS_Output</relationshipLabel>
    <relationshipName>PS_Output</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>