force-app/main/default/objects/PS_Output__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Disountable_Lot_Charge_Override__c</columns>
    <columns>Non_Disountable_Lot_Charge_Override__c</columns>
    <columns>Price_Override__c</columns>
    <columns>isPriceOverride__c</columns>
    <columns>Price_Total__c</columns>
    <columns>Lead_Time_10__c</columns>
    <columns>Lead_Time_20__c</columns>
    <columns>Lead_Time_30__c</columns>
    <columns>Lead_Time_40__c</columns>
    <columns>OA_Override__c</columns>
    <columns>Part_Selector__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>